# waylyrics

./: .gitignore  Makefile  PKGBUILD  README.md  meson.build
backup/: lib.hpp
demo/: PlayerManager.cpp  SigDemo.cpp  cdemo.c  demo.cpp
docs/: GDB调试帮助.md  TODO.md  dbus命令行帮助.md  功能实现文档.md
include/: common.h  lib.hpp  player_manager.h  utils.hpp  way_lyrics.h  waybar_cffi_module.h
src/: player_manager.cpp  way_lyrics.cpp  waylyrics.cpp
waylyrics/: waylyrics.cpp
